# c-number-base-converter

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
NumberBaseConverter/: CMakeLists.txt
NumberBaseConverter/src/: main.c
base_conversions/: CMakeLists.txt
base_conversions/src/: base_conversions.c
include/: base_conversions.h  io_utility.h  numbers_utility.h  utility.h
src/: base_conversions.c  io_utility.c  main.c  numbers_utility.c  utility.c
tests/: CMakeLists.txt
tests/src/: test_base_conversions.c
utility/: CMakeLists.txt
utility/include/: numbers_utility.h
utility/src/: numbers_utility.c
